WinCC_OA_Test/TestSuites/suite_CtrlppCheck/sub_app/scripts/testscripts/emptyScope.ctl
// start options: --inconclusive

void main()
{
  // error
  if ( a == b )
  {  
  }
    
  // error
  if ( a == b )
  {
    // jpsajdpo
  }
  else
  {
  }
    
  // no error
  if ( a == b )
  {
    DebugN(a);
  }
  
  for(i; i; i++){}
  
  while(n){}
  
  do
  {
  }
  while(d);
  
  switch(s)
  {
  }
  
  try
  {
  }
  catch
  {
  }
}

void emptyFunc()
{
}

class C{};
struct S{};
